--- a/Teste Job.ipynb
+++ b/Teste Job.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\vnesp\\Dropbox\\My PC (LAPTOP-FS94BQ5T)\\Documents\\GitHub\\Job-Rotation\\Teste Job.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=0'>1</a>\u001b[0m \u001b[39m#Questão 3\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=4'>5</a>\u001b[0m dados \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_json(\u001b[39m\"\u001b[39m\u001b[39mdados.json\u001b[39m\u001b[39m\"\u001b[39m) \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=6'>7</a>\u001b[0m dias_validos \u001b[39m=\u001b[39m dados[\u001b[39m\"\u001b[39m\u001b[39mvalor\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m!=\u001b[39m \u001b[39m0.0\u001b[39m\n",
+      "\u001b[1;32mc:\\Users\\vnesp\\Dropbox\\My PC (LAPTOP-FS94BQ5T)\\Documents\\GitHub\\Job-Rotation\\Teste Job.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=0'>1</a>\u001b[0m \u001b[39m#Questão 3\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mArq\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000001?line=6'>7</a>\u001b[0m dados \u001b[39m=\u001b[39m Arq\u001b[39m.\u001b[39mread_json(\u001b[39m\"\u001b[39m\u001b[39mdados.json\u001b[39m\u001b[39m\"\u001b[39m) \n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
      ]
     }
@@ -52,55 +52,67 @@
     "#Questão 3\n",
     "\n",
     "import pandas as Arq\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "dados = Arq.read_json(\"dados.json\") \n",
     "\n",
     "dias_validos = dados[\"valor\"] != 0.0\n",
     "dados = dados[dias_validos]\n",
-    "\n",
-    "print(\"o dia com menor fatura foi\",dados.min()['valor'])\n",
-    "print(f\"O menor valor de faturamento foi {dados.min()['valor']}.\")\n",
-    "print(f\"O maior valor de faturamento foi {dados.max()['valor']}.\")\n",
+    "                \n",
+    "print(\"o dia com menor faturamento foi\",dados.min()['valor'])\n",
+    "print(\"o dia com maior faturamento foi\",dados.max()['valor'])\n",
+    "print(\"a media do mes foi \",dados.mean()['valor'])\n",
     "\n",
     "media_mensal = dados.mean()[\"valor\"]\n",
     "media_mensal_superior = dados[\"valor\"] > media_mensal\n",
     "dias_superior = dados[media_mensal_superior].shape[0]\n",
-    "print(f\"Tivemos {dias_superior} dias no mês acima da média de faturamento mensal.\")\n",
+    "print(\"Teve \",dias_superior,\"dias acima da media \")\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\vnesp\\Dropbox\\My PC (LAPTOP-FS94BQ5T)\\Documents\\GitHub\\Job-Rotation\\Teste Job.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000002?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000002?line=2'>3</a>\u001b[0m dados \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_json(\u001b[39m\"\u001b[39m\u001b[39mdados.json\u001b[39m\u001b[39m\"\u001b[39m) \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vnesp/Dropbox/My%20PC%20%28LAPTOP-FS94BQ5T%29/Documents/GitHub/Job-Rotation/Teste%20Job.ipynb#ch0000002?line=4'>5</a>\u001b[0m dias_validos \u001b[39m=\u001b[39m dados[\u001b[39m\"\u001b[39m\u001b[39mvalor\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m!=\u001b[39m \u001b[39m0.0\u001b[39m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "#Questão 4\n",
     "\n",
-    "dados = pd.read_json(\"dados.json\") \n",
+    "SP = 67836.43\n",
+    "RJ = 36678.66\n",
+    "MG = 29229.88\n",
+    "ES = 27165.48\n",
+    "OUTROS = 19849.53\n",
     "\n",
-    "dias_validos = dados[\"valor\"] != 0.0\n",
-    "dados = dados[dias_validos]\n",
+    "TOTAL = SP + RJ + MG + ES + OUTROS\n",
+    "PERC_SP = SP / TOTAL * 100\n",
+    "PERC_RJ = RJ / TOTAL * 100\n",
+    "PERC_MG = MG / TOTAL * 100\n",
+    "PERC_ES = ES / TOTAL * 100\n",
+    "PERC_OUTROS = OUTROS / TOTAL * 100\n",
     "\n",
-    "print(f\"O menor valor de faturamento foi {dados.min()['valor']}.\")\n",
-    "print(f\"O maior valor de faturamento foi {dados.max()['valor']}.\")\n",
-    "\n",
-    "media_mensal = dados.mean()[\"valor\"]\n",
-    "media_mensal_superior = dados[\"valor\"] > media_mensal\n",
-    "dias_superior = dados[media_mensal_superior].shape[0]\n",
-    "print(f\"Tivemos {dias_superior} dias no mês acima da média de faturamento mensal.\")"
+    "print(f'SP representou {PERC_SP:.2f}% do valor total mensal')\n",
+    "print(f'RJ representou {PERC_RJ:.2f}% do valor total mensal')\n",
+    "print(f'MG representou {PERC_MG:.2f}% do valor total mensal')\n",
+    "print(f'ES representou {PERC_ES:.2f}% do valor total mensal')\n",
+    "print(f'Outros estados representaram {PERC_OUTROS:.2f}% do valor total mensal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str = \"LearnPython\"\n",
+    "string_reversed=[]\n",
+    "i = len(str)\n",
+    "while i > 0: \n",
+    "    string_reversed += str[i-1]\n",
+    "    i = i - 1 \n",
+    "print(\"string reversa é\", string_reversed)"
    ]
   }
  ],
