Coomit teste job

--- a/Teste Job.ipynb
+++ b/Teste Job.ipynb
@@ -24,7 +24,7 @@
     "        ultimo = termo\n",
     "        count += 1\n",
     "        if(n==termo):\n",
-    "            print(\"o numero digitado pertence a sequencia de fibo\",n)\n",
+    "            print(\"o numero digitado pertence a sequencia de fibonnaci\",n)\n",
     "            break \n",
     "    print(termo)\n",
     "\n"
